# tilescript

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  ANIMATIONS.md  CMakeLists.txt  Cargo.toml  HYPREACT.md  Makefile  README.md  RESIZING.md  interop.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-playground-pages.yml
apps/hypreact-playground/: Cargo.toml  Trunk.toml  build.rs  index.css  index.html
apps/hypreact-playground/js/: package.json  vite.config.js
apps/hypreact-playground/js/src/: css-lsp-client.ts  fennel-compiler-source.ts  lua-runtime.ts  monaco-host.ts
apps/hypreact-playground/src/: app_state.rs  editor_files.rs  editor_host.rs  layout_runtime.rs  lib.rs  monaco_host_bundle.js  session.rs  workspace.rs
apps/hypreact-playground/src/components/: context_menu.rs  mod.rs  tooltip.rs
apps/hypreact-playground/src/views/: mod.rs
apps/hypreact-playground/src/views/editor/: actions.rs  buffers.rs  clipboard.rs  download.rs  file_tree.rs  index.rs  mod.rs  monaco.rs
apps/hypreact-playground/src/views/preview/: index.rs  inspector.rs  mod.rs  scene.rs  windows.rs
apps/hypreact-playground/src/views/system/: index.rs  mod.rs  state.rs
apps/tilescript-playground/: Cargo.toml  Trunk.toml  build.rs  index.css  index.html
apps/tilescript-playground/js/: package.json
apps/tilescript-playground/js/src/: css-lsp-client.ts  css-lsp-worker.ts  lua-runtime.ts  monaco-host.ts
apps/tilescript-playground/src/: app_state.rs  editor_files.rs  layout_runtime.rs  lib.rs  lua_runtime_bundle.js  monaco_host_bundle.js  session.rs  workspace_tree.rs
apps/tilescript-playground/src/views/editor/: actions.rs  download.rs  file_tree.rs  index.rs  monaco.rs
apps/tilescript-playground/src/views/preview/: index.rs  mod.rs  scene.rs  windows.rs
crates/config/: Cargo.toml
crates/config/src/: config_decode.rs  layout_decode.rs  lib.rs  model.rs  runtime.rs  selection.rs
crates/config/src/authoring_layout/: config_paths.rs  mod.rs  prepared_cache.rs  service.rs  source_bundle_service.rs  tests.rs
crates/config/src/virtual/: api.js
crates/config/tests/fixtures/project/layouts/: fallback.js
crates/config/tests/fixtures/runtime/layouts/: master-stack.js
crates/core/: Cargo.toml
crates/core/src/: command.rs  focus.rs  focus_visual.rs  host.rs  ids.rs  layout.rs  lib.rs  navigation.rs  query.rs  resize.rs  snapshot.rs  types.rs  wm.rs  workspace.rs
crates/css/: Cargo.toml
crates/css-lsp/core/: Cargo.toml
crates/css-lsp/core/src/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  documents.rs  hover.rs  lib.rs  project.rs  protocol.rs  ranking.rs  references.rs  rename.rs  session.rs  symbols.rs  syntax.rs  uri.rs  workspace.rs  workspace_symbols.rs
crates/css-lsp/stdio/: Cargo.toml
crates/css-lsp/stdio/src/: main.rs
crates/css-lsp/web/: Cargo.toml
crates/css-lsp/web/src/: lib.rs
crates/css/src/: analysis.rs  compile.rs  compiled.rs  grid.rs  language.rs  lib.rs  parse_values.rs  parsing.rs  query.rs  source.rs  style.rs  stylo_adapter.rs  stylo_compile.rs  tokenizer.rs
crates/css/tests/: docs_css_sync.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: abi.rs  action.rs  bootstrap.rs  layout.rs  lib.rs  response.rs  runtime_types.rs  sdk.rs
crates/hypr-ffi/: Cargo.toml
crates/hypr-ffi/src/: abi.rs  action.rs  bootstrap.rs  ffi_string.rs  layout.rs  lib.rs  response.rs  runtime_types.rs  sdk.rs  types.rs
crates/layout-runtime/: Cargo.toml
crates/layout-runtime/src/: lib.rs  runtime_factory.rs  source_watcher.rs
crates/runtimes/js/: Cargo.toml
crates/runtimes/js/browser/: Cargo.toml
crates/runtimes/js/browser/src/: lib.rs
crates/runtimes/js/core/: Cargo.toml
crates/runtimes/js/core/src/: compile.rs  config_decode.rs  graph.rs  layout_value.rs  lib.rs  loader.rs  payload.rs  source_bundle.rs  virtual_modules.rs
crates/runtimes/js/core/src/virtual/: layout.js
crates/runtimes/js/native/: Cargo.toml
crates/runtimes/js/native/src/: authored.rs  compile.rs  layout_value.rs  lib.rs  loader.rs  module_graph_runtime.rs  payload.rs  runtime.rs
crates/runtimes/js/native/src/virtual/: api.js
crates/runtimes/js/src/: authored.rs  compile.rs  graph.rs  lib.rs  loader.rs  module_graph.rs  runtime.rs
crates/runtimes/lua/browser/: Cargo.toml
crates/runtimes/lua/browser/src/: lib.rs  lua_runtime_bundle.js
crates/runtimes/lua/native/: Cargo.toml
crates/runtimes/lua/native/src/: lib.rs
crates/scene/: Cargo.toml
crates/scene/src/: css_matching.rs  layout_calc.rs  lib.rs  matching.rs  scene.rs  style.rs  style_calc.rs  style_tree.rs
crates/scene/src/ast/: mod.rs  resolve.rs  tests.rs  validate.rs
crates/scene/src/css/: apply.rs  mod.rs  taffy.rs
crates/scene/src/motion/: easing.rs  mod.rs  phases.rs  state.rs
crates/scene/src/motion/modifiers/: mod.rs  opacity.rs  transform.rs
crates/scene/src/motion/runtime/: animation.rs  appliers.rs  mod.rs  shared.rs  transition.rs
crates/scene/src/pipeline/: mod.rs
dev/hypr/: hyprland.conf  launch-hypr-dev.sh
dev/test/: config.ts  index.css  tsconfig.json
dev/test-config/: config.ts  tsconfig.json
dev/test/components/: StackGroup.css  StackGroup.tsx
docs/: config.md  css-lsp.md  css.md  development.md  hyprland.md  jsx.md  playground.md
docs/plan/: animations.md  css-refactor.md  fennel.md  lua.md  performance-playground.md  performance.md  playground.md  resizing.md  v2.md
examples/fennel/: config.fnl
examples/js/: config.ts
examples/lua/: .luarc.json  config.lua
include/: hypreact_hypr_ffi.h  hypreact_plugin_runtime.hpp
plugin/hyprland/include/: hypreact_hypr_ffi.h  hypreact_plugin_algorithm.hpp  hypreact_plugin_dispatchers.hpp  hypreact_plugin_hooks.hpp  hypreact_plugin_query.hpp  hypreact_plugin_runtime.hpp  hypreact_plugin_sync.hpp  tilescript_hypr_ffi.h  tilescript_hypr_plugin_algorithm.hpp  tilescript_hypr_plugin_dispatchers.hpp  (+4 more)
src/: plugin.cpp  plugin_runtime.cpp
test_config/: index.css  tsconfig.json
test_config/components/: StackGroup.tsx
test_config/test_config/: config.ts  tsconfig.json
(+43 files in other folders)
