[workspace]
resolver = "2"
members = [
  "apps/tilescript-playground",
  "crates/core",
  "crates/css",
  "crates/css-lsp/core",
  "crates/css-lsp/stdio",
  "crates/css-lsp/web",
  "crates/scene",
  "crates/config",
  "crates/runtimes/js/core",
  "crates/runtimes/js/native",
  "crates/runtimes/js/browser",
  "crates/runtimes/fennel/core",
  "crates/runtimes/lua/core",
  "crates/runtimes/lua/native",
  "crates/runtimes/lua/browser",
  "crates/layout-runtime",
  "crates/ffi",
]

[workspace.package]
edition = "2024"
license = "BSD-3-Clause"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1"
console_error_panic_hook = "0.1.7"
cssparser = "0.36"
inotify = "0.11.1"
leptos = "0.8.17"
leptos_router = "0.8.8"
lsp-server = "0.7"
lsp-types = "0.94"
mlua = "0.10.5"
oxc = "0.119.0"
oxc_resolver = "11.19.1"
precomputed-hash = "0.1"
regex = "1"
rquickjs = "0.11.0"
selectors = "0.36.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
stylo = "0.14.0"
style_traits = { package = "stylo_traits", version = "0.14.0" }
taffy = "0.9.2"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
url = "2.5"
js-sys = "0.3"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
