[package]
name = "tilescript-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tilescript-scene = { path = "../scene" }
tilescript-core = { path = "../core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
