[package]
name = "tilescript-css"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tilescript-core = { path = "../core" }
cssparser.workspace = true
precomputed-hash.workspace = true
selectors.workspace = true
stylo.workspace = true
style_traits.workspace = true
url.workspace = true
serde.workspace = true
thiserror.workspace = true
