[package]
name = "tilescript-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tilescript-config = { path = "../config" }
tilescript-core = { path = "../core" }
tilescript-layout-runtime = { path = "../layout-runtime" }
thiserror.workspace = true
