[package]
name = "hypreact-layout-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hypreact-config = { path = "../config" }
hypreact-core = { path = "../core" }
hypreact-css = { path = "../css" }
hypreact-runtime-js-native = { path = "../runtimes/js/native" }
hypreact-runtime-lua-native = { path = "../runtimes/lua/native" }
hypreact-scene = { path = "../scene" }
inotify = "0.11.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
