[package]
name = "tilescript-layout-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tilescript-config = { path = "../config" }
tilescript-core = { path = "../core" }
tilescript-css = { path = "../css" }
tilescript-runtime-js-native = { path = "../runtimes/js/native" }
tilescript-runtime-lua-native = { path = "../runtimes/lua/native" }
tilescript-scene = { path = "../scene" }
inotify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
