[package]
name = "tilescript-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tilescript-core = { path = "../core" }
tilescript-css = { path = "../css" }
cssparser.workspace = true
precomputed-hash.workspace = true
selectors.workspace = true
stylo.workspace = true
style_traits.workspace = true
taffy.workspace = true
thiserror.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
