[package]
name = "hypreact-css-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hypreact-css-lsp-core = { path = "../core" }
lsp-server.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
