[package]
name = "hypreact-runtime-js"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
oxc = { workspace = true, features = ["full"] }
oxc_resolver.workspace = true
rquickjs = { workspace = true, features = ["loader"] }
serde.workspace = true
serde_json.workspace = true
hypreact-config = { path = "../../config" }
hypreact-core = { path = "../../core" }
hypreact-scene = { path = "../../scene" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
