[package]
name = "tilescript-runtime-js-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
oxc = { workspace = true, features = ["full"] }
oxc_resolver.workspace = true
serde.workspace = true
serde_json.workspace = true
tilescript-config = { path = "../../../config" }
tilescript-core = { path = "../../../core" }
tilescript-scene = { path = "../../../scene" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
