[package]
name = "tilescript-runtime-js-native"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
oxc = { workspace = true, features = ["full"] }
rquickjs = { workspace = true, features = ["loader"] }
serde.workspace = true
serde_json.workspace = true
tilescript-config = { path = "../../../config" }
tilescript-core = { path = "../../../core" }
tilescript-runtime-js-core = { path = "../core" }
tilescript-scene = { path = "../../../scene" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
