[package]
name = "tilescript-runtime-lua-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tilescript-config = { path = "../../../config" }
tilescript-core = { path = "../../../core" }
tilescript-runtime-fennel-core = { path = "../../fennel/core" }
tilescript-runtime-lua-core = { path = "../core" }
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
