[package]
name = "hypreact-runtime-lua-native"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hypreact-config = { path = "../../../config" }
hypreact-core = { path = "../../../core" }
hypreact-runtime-fennel-core = { path = "../../fennel/core" }
hypreact-runtime-lua-core = { path = "../core" }
mlua = { workspace = true, features = ["lua54", "vendored", "serialize"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
